Stylesheet/emote/tag updates 2012-12-24

--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -235,3 +235,147 @@ a[href|="/scratchout"] {
     width: 126px;
     height: 200px;
     background-image: url(%%scratchmote1%%) }
+
+a[href|="/madmeansealofapproval"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-image: url(%%APPROVED%%) }
+
+a[href|="/areyoufuckingkiddingme"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 198px;
+    background-image: url(%%areyoufuckingkiddingme%%) }
+
+a[href|="/creepypie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 194px;
+    height: 200px;
+    background-image: url(%%creepypie%%) }
+
+a[href|="/idunnoblamemadmean"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 153px;
+    height: 170px;
+    background-image: url(%%face%%) }
+
+a[href|="/itspartytime"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 174px;
+    background-image: url(%%itspartytime%%) }
+
+a[href|="/lyredrink"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 158px;
+    height: 200px;
+    background-image: url(%%lyredrink%%) }
+
+a[href|="/chakolatechip"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-image: url(%%chakolatechip%%) }
+
+a[href|="/creepylis"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 400px;
+    height: 232px;
+    background-image: url(%%creepylis%%) }
+
+a[href|="/dyebetrayyourfriends"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 159px;
+    height: 200px;
+    background-image: url(%%dyebetrayyourfriends%%) }
+
+a[href|="/dyebreakrecords"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 140px;
+    height: 200px;
+    background-image: url(%%dyebreakrecords%%) }
+
+a[href|="/dyegofast"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 300px;
+    height: 300px;
+    background-image: url(%%dyegofast%%) }
+
+a[href|="/dyehaveabrain"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 192px;
+    height: 200px;
+    background-image: url(%%dyehaveabrain%%) }
+
+a[href|="/queenlie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 265px;
+    background-image: url(%%queenlie%%) }
+
+a[href|="/queenlove"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 150px;
+    background-image: url(%%queenlove%%) }
+
+a[href|="/spitwut"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 195px;
+    background-image: url(%%spitwut%%) }
+
+a[href|="/icfot"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 323px;
+    height: 400px;
+    background-image: url(%%icfot%%) }
+
+a[href|="/tentenwouldincubate"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 400px;
+    height: 324px;
+    background-image: url(%%wyime%%) }
+
+a[href|="/dyelove"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 262px;
+    height: 300px;
+    background-image: url(%%dyelove%%) }
