--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -260,7 +260,7 @@ a.author[href$="Hackey_Sack"]:after {
     visibility:visible; font-size: 10px; color: #369; content: " (undergroundmonorail)"
 }
 a.author[href$="ch3nTHEninja"]:after {
-    visibility:visible; font-size: 10px; color: #369; content: " (inFluX)"
+    visibility:visible; font-size: 10px; color: #369; content: " (Fluxy)"
 }
 a.author[href$="A_Mirror"]:after {
     visibility:visible; font-size: 10px; color: #369; content: " (Agent Rainbow Dash)"
