--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1541,6 +1541,9 @@ a.author[href$="/3holes2tits1fork"]:after {
 .flair-drstable {
    background-position: -0px -512px;
    }
+.flair-sewnsow {
+    background-position: -16px -512px;
+   }
 .flair-blankflank{
     background-image: none;
     height: 0;
@@ -1662,7 +1665,7 @@ content:"";
 .titlebox .usertext-body .md ol li + li {
     display:inline-block;
     float:right;
-    background:url(%%pinkie-present-hat%%);
+    background:url(%%applehat%%);
     width:60px;
     height:60px;
     margin-top:-37px;
