Stylesheet/emote/tag updates 2012-12-30

--- a/source-css/applejack.css
+++ b/source-css/applejack.css
@@ -44,14 +44,14 @@ a.author[href$="reahidru"]:after {
     font-size: 12px !important;
     visibility: visible !important
     }
-a.author[href$="mavrick45"] {
+a.author[href$="milkshakeman"] {
     font-size: 0px !important;
     display: inline-block;
     overflow: hidden;
     vertical-align: bottom
     }
-a.author[href$="mavrick45"]:after {
-    content: "Mav";
+a.author[href$="milkshakeman"]:after {
+    content: "appleshakeman";
     font-size: 12px !important;
     visibility: visible !important
     }
@@ -108,7 +108,7 @@ background-position: 0 -10px;
 .side .subtitle, .flairtoggle {color:black;}
 body {
 background-color: #E3C19C !important;
-    background: url(%%grumpyjack%%) no-repeat fixed center center
+    background: url(%%applemouth%%) no-repeat fixed center center
     }
 div.footer-parent:after {
     width: 960px;
