--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -329,6 +329,105 @@ height: 87px;
 background-image: url(%%cmcshake%%) !important
 }
 
+a[href|="/bpdrink"]{
+display:block;
+clear: none;
+float: left;
+width: 188px;
+height: 140px;
+background-image: url(%%bpdrink%%) !important
+}
+
+a[href|="/thesafewordiskumquat"], a[href|="/pinkieception"]{
+display:block;
+clear: none;
+float: left;
+width: 249px;
+height: 140px;
+background-image: url(%%thesafewordiskumquat%%) !important
+}
+
+a[href|="/abchaos"], a[href|="/theendoftheworldasweknowit"]{
+display:block;
+clear: none;
+float: left;
+width: 180px;
+height: 140px;
+background-image: url(%%abchaos%%) !important
+}
+
+a[href|="/hugyouandkissyouandloveyouforever"], a[href|="/ppelmyra"], a[href|="/ppsqueeze"]{
+display:block;
+clear: none;
+float: left;
+width: 133px;
+height: 140px;
+background-image: url(%%ppelmyra%%) !important
+}
+
+a[href|="/deskfuck"]{
+display:block;
+clear: none;
+float: left;
+width: 192px;
+height: 140px;
+background-image: url(%%deskfuck%%) !important
+}
+
+a[href|="/abeepbeep"]{
+display:block;
+clear: none;
+float: left;
+width: 71px;
+height: 70px;
+background-image: url(%%abeepbeep%%) !important
+}
+
+a[href|="/twihop"]{
+display:block;
+clear: none;
+float: left;
+width: 232px;
+height: 140px;
+background-image: url(%%twihop%%) !important
+}
+
+a[href|="/ilovebooze"], a[href|="/rdjack"]{
+display:block;
+clear: none;
+float: left;
+width: 140px;
+height: 140px;
+background-image: url(%%rdjack%%) !important
+}
+
+a[href|="/teamwork"], a[href|="/bluexmiggyotp"]{
+display:block;
+clear: none;
+float: left;
+width: 196px;
+height: 110px;
+background-image: url(%%teamwork%%) !important
+}
+
+a[href|="/tearypie"]{
+display:block;
+clear: none;
+float: left;
+width: 249px;
+height: 140px;
+background-image: url(%%tearypie%%) !important
+}
+
+a[href|="/pixelpunch"]{
+display:block;
+clear: none;
+float: left;
+width: 118px;
+height: 86px;
+background-image: url(%%pixpunch%%) !important
+}
+
 /* Sheet offsets */
 a[href|="/btl00"], a[href|="/halp"] {
 background-position: -0px -0px
