--- a/source-css/mlpvectors.css
+++ b/source-css/mlpvectors.css
@@ -163,7 +163,7 @@ a[href|="/applestare"], a[href|="/buysomeab"], a[href|="/cadenceworried"], a[hre
     height: 80px;
     background-image: url(%%emotesheet1fin%%) !important
     }
-a[href|="/dashsquee"], a[href|="/dashuhoh"], a[href|="/derplejack"], a[href|="/derpout"], a[href|="/derpyhuh"], a[href|="/devioustwi"], a[href|="/facedirt"], a[href|="/fluttergasp"], a[href|="/flutterglare"], a[href|="/lyrauhh"], a[href|="/lyrawhy"], a[href|="/notfabulous"], a[href|="/nowkiss"], a[href|="/ohdear"], a[href|="/pinkieee"], a[href|="/rainbowyuno"], a[href|="/scootadrop"], a[href|="/scootexcite"], a[href|="/twishout"], a[href|="/twiwat"], a[href|="/winkiepie"], a[href|="/wrongwayaj"] {
+a[href|="/dashsquee"], a[href|="/dashuhoh"], a[href|="/derplejack"], a[href|="/derpout"], a[href|="/derpyhuh"], a[href|="/devioustwi"], a[href|="/facedirt"], a[href|="/fluttergasp"], a[href|="/flutterglare"], a[href|="/lyrauhh"], a[href|="/lyrawhy"], a[href|="/notfabulous"], a[href|="/nowkiss"], a[href|="/ohdear"], a[href|="/pinkieee"], a[href|="/rainbowyuno"], a[href|="/scootadrop"], a[href|="/scootexcite"], a[href|="/twishout"], a[href|="/twiwat"], a[href|="/winkiepie"], a[href|="/wrongwayaj"], a[href|="/g3pinkie"] {
     display: block;
     clear: none;
     float: left;
@@ -299,6 +299,9 @@ a[href|="/winkiepie"] {
 }
 a[href|="/wrongwayaj"] {
     background-position: -160px -240px
+}
+a[href|="/g3pinkie"] {
+    background-position: -160px -320px
 }
 
 /* Hide the emote table except on hover */
