--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -283,7 +283,9 @@ a.author[href$="ObsidianPixl"]:after {
 a.author[href$="go4it7arh"]:after {
     visibility:visible; font-size: 10px; color: #369; content: " (Oxford Comma)"
 }
-
+a.author[href$="damn-the-torpedoes"]:after {
+    visibility:visible; font-size: 10px; color: #369; content: " (scootaloo-rownfsh)"
+}
 
 /* FLAIR */
 .flair { display:inline-block; padding: 0;  background: transparent url(%%July2012b%%) no-repeat;  color: black;  border: 0;  border-radius: 0;  text-indent: -9999px; width: 25px;  height: 25px; }
