--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1665,7 +1665,7 @@ content:"";
 .titlebox .usertext-body .md ol li + li {
     display:inline-block;
     float:right;
-    background:url(%%applehat%%);
+    background:url(%%spike-hat%%);
     width:60px;
     height:60px;
     margin-top:-37px;
