--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -379,3 +379,27 @@ a[href|="/dyelove"] {
     width: 262px;
     height: 300px;
     background-image: url(%%dyelove%%) }
+
+a[href|="/flutterguy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 133px;
+    background-image: url(%%ZZ5JM%%) }
+
+a[href|="/maredovvell"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 300px;
+    height: 185px;
+    background-image: url(%%9Au3j-copy%%) }
+
+a[href|="/miggyb2"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 249px;
+    height: 300px;
+    background-image: url(%%miggy2%%) }
