--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -69,7 +69,7 @@ height:100px;
 /* Banner Image */
 /*Banner by DarkDragon774 http://darkdragon774.deviantart.com/art/Fallout-Equestria-background-STOCK-277629738) */
 #header #header-bottom-left {
-    background: url(%%background-100%%);
+    background: url(%%background-100-v2%%);
     background-color:#939683; 
     background-color: transparent;
      /*  margin-top: 50px; */
@@ -185,58 +185,41 @@ a[href="/s"]:hover::after, a[href="/sr"]:active::after, a[href="/st"]:active::af
 }
 
 
-a[href|="/lpwut"], a[href|="/lphurt"], a[href|="/homage"], a[href|="/bjstare"], a[href|="/bjclassy"], a[href|="/anteup"], a[href|="/queenwhiskey"], a[href|="/p21fun"],
-a[href|="/p21notamused"], a[href|="/p21"], a[href|="/glory"], a[href|="/charity"], a[href|="/bjscared"], a[href|="/rampage"], a[href|="/lphappy"], a[href|="/omnomnom"], a[href|="/givemeec1101"], a[href|="/calamity"], a[href|="/pinkeyes"], a[href|="/lpwet"], a[href|="/mmdash"], a[href|="/psychoshy"], a[href|="/fightcalamity"], a[href|="/velvetremedy"], a[href|="/lparmed"], a[href|="/gawd"], a[href|="/steelhooves"], a[href|="/lpnotwant"]
+a[href|="/lpwut"], a[href|="/lphurt"], a[href|="/homage"], a[href|="/bjstare"], a[href|="/bjclassy"], a[href|="/anteup"], a[href|="/p21fun"],
+a[href|="/p21notamused"], a[href|="/p21"], a[href|="/glory"], a[href|="/charity"], a[href|="/bjscared"], a[href|="/rampage"], a[href|="/lphappy"], a[href|="/omnomnom"], a[href|="/givemeec1101"], a[href|="/calamity"], a[href|="/pinkeyes"], a[href|="/lpwet"], a[href|="/mmdash"], a[href|="/velvetremedy"], a[href|="/lparmed"], a[href|="/gawd"], a[href|="/steelhooves"], a[href|="/lpnotwant"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em1-v1%%);
+background-image: url(%%foe-em1-v6%%);
 }
 
 
-a[href|="/lphappy"]{ background-position: -70px -210px; }
-a[href|="/lpwut"]{ background-position: -0px -0px; }
-a[href|="/lphurt"]{ background-position: -70px -0px; }
+a[href|="/lphappy"]{ background-position: 0 -1190px; width: 70px; height: 70px; }
+a[href|="/lpwut"]{ background-position: 0 -1749px; width: 70px; height: 70px; }
+a[href|="/lphurt"]{ background-position: 0 -1310px; width: 70px; height: 70px; }
+a[href|="/homage"]{ background-position: 0 -870px; width: 70px; height: 70px; }
+a[href|="/bjstare"]{ background-position: 0 -360px; width: 70px; height: 70px; }
+a[href|="/bjclassy"]{ background-position: 0 -120px; width: 70px; height: 70px; }
+a[href|="/p21"]{ background-position: -202px -256px; width: 70px; height: 70px; }
+a[href|="/glory"]{ background-position: 0 -750px; width: 70px; height: 70px; }
+a[href|="/rampage"]{ background-position: -202px -646px; width: 70px; height: 70px; }
+a[href|="/bjscared"]{ background-position: 0 -240px; width: 70px; height: 70px; }
+a[href|="/p21notamused"], a[href|="/p21fun"]{ background-position: -202px -376px; width: 70px; height: 70px;}
+a[href|="/anteup"]{background-position: 0 0; width: 70px; height: 70px; }
+a[href|="/charity"]{ background-position: 0 -630px; width: 70px; height: 70px; }
+a[href|="/omnomnom"], a[href|="/givemeec1101"]{background-position: -202px 0; width: 209px; height: 206px;}
+a[href|="/calamity"]{  background-position: 0 -480px; width: 100px; height: 100px;}
+a[href|="/pinkeyes"]{ background-position: -202px -496px; width: 64px; height: 100px;}
+a[href|="/lpwet"]{ background-position: 0 -1550px; width: 90px; height: 149px;}
+a[href|="/mmdash"]{ background-position: 0 -1869px; width: 59px; height: 148px;}
+a[href|="/lparmed"]{ background-position: 0 -990px; width: 152px; height: 150px;}
+a[href|="/steelhooves"]{ background-position: -202px -766px; width: 114px; height: 143px;}
+a[href|="/lpnotwant"]{ background-position: 0 -1430px; width: 67px; height: 70px;}
 
-a[href|="/homage"]{ background-position: -140px -0px; }
 
-a[href|="/bjstare"]{ background-position: -210px -0px; }
-a[href|="/bjclassy"]{ background-position: -280px -0px; }
-
-a[href|="/p21"]{ background-position: -210px -70px; }
-a[href|="/glory"]{ background-position: -280px -70px; }
-a[href|="/rampage"]{ background-position: -0px -210px; }
-
-a[href|="/queenwhiskey"]{ background-position: -70px -70px; width: 69px; height: 70px;}
-a[href|="/bjscared"]{ background-position: -70px -140px; }
-a[href|="/p21notamused"], a[href|="/p21fun"]{ background-position: -139px -70px; width: 67px; height: 70px;}
-
-a[href|="/anteup"]{ background-position: -0px -70px; }
-a[href|="/charity"]{ background-position: -0px -140px; }
-
-a[href|="/omnomnom"], a[href|="/givemeec1101"]{ background-position: -140px -140px; width: 210px; height: 210px;}
-
-a[href|="/calamity"]{ background-position: -0px -280px; width: 100px; height: 100px;}
-
-a[href|="/pinkeyes"]{ background-position: -100px -347px; width: 100px; height: 100px;}
-
-a[href|="/lpwet"]{ background-position: -200px -348px; width: 95px; height: 150px;}
-
-a[href|="/mmdash"]{ background-position: 0px -380px; width: 64px; height: 151px;}
-
-a[href|="/psychoshy"]{ background-position: -74px -460px; width: 111px; height: 150px;}
-a[href|="/psychoshy"]:hover{ background-position: -197px -505px; width: 111px; height: 150px;}
-
-a[href|="/fightcalamity"]{ background-position: 0px -608px; width: 154px; height: 150px;}
-
-a[href|="/lparmed"]{ background-position: 0px -770px; width: 157px; height: 150px;}
-
-a[href|="/steelhooves"]{ background-position: -196px -656px; width: 120px; height: 150px;}
-
-a[href|="/lpnotwant"]{ background-position: 0px -534px;}
 
 a[href|="/velvetremedy"], a[href|="/gawd"], a[href|="/lacunae"], a[href|="/murky"], a[href|="/protege"], a[href|="/wickedslit"], a[href|="/lpshrug"], a[href|="/grifanywhere"], a[href|="/foevictory"], a[href|="/lptable"], a[href|="/mmppwatching"], a[href|="/lionmouse"], a[href|="/lpcrying"], a[href|="/lpblush"], a[href|="/bjshooty"], a[href|="/lpsurprise"], a[href|="/velvetlook"], a[href|="/lpfrown"],  a[href|="/lpsad"], a[href|="/spiderjerusalem"], a[href|="/stygius"]
 {
@@ -314,14 +297,14 @@ background-image: url(%%bjshake%%);
 
 a[href|="/bjshake"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"], a[href|="/grumpypip"], a[href|="/g3bj"], a[href|="/mop"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"], a[href|="/grumpypip"], a[href|="/g3bj"], a[href|="/mop"], a[href|="/lppuppy"], a[href|="/queenwhiskey"], a[href|="/motherofgawd"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v29%%);
+background-image: url(%%foe-em3-v33%%);
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -333,14 +316,35 @@ a[href|="/calamitywtf"]{ background-position: 0px -535px; width:78px; height:101
 a[href|="/harmony"]{ background-position: 0px -640px; width:200px; height:225px;}
 a[href|="/bjsurprise"]{ background-position: 0px -870px; width: 119px; height: 76px;}
 a[href|="/lpfilly"]{ background-position: 0px -1255px; width: 125px; height: 150px;}
-/* a[href|="/cyberboop"]{ background-position: 0px -1410px; width: 200px; height: 94px;} */
-a[href|="/qnwhsk"]{ background-position: 0px -1510px; width: 70px; height: 85px;}
+a[href|="/qnwhsk"], a[href|="/queenwhiskey"]{ background-position: 0px -1510px; width: 70px; height: 85px;}
 a[href|="/bjwhiskey"]{ background-position: 0px -1905px; width: 96px; height: 149px;}
 a[href|="/crazyrampage"]{ background-position: 0px -2060px; width: 150px; height: 105px;}
 a[href|="/deus"]{ background-position: 0px -2170px; width: 150px; height: 139px;}
 a[href|="/grumpypip"]{ background-position: 0px -2315px; width: 142px; height: 150px;}
 a[href|="/g3bj"]{ background-position: 0px -2470px; width: 75px; height: 70px;}
 a[href|="/mop"]{ background-position: 0px -2545px; width: 100px; height: 150px;}
+a[href|="/lppuppy"]{ background-position: 0px -1415px; width: 70px; height: 68px;}
+a[href|="/motherofgawd"]{ background-position: 0px -2700px; width: 96px; height: 99px;}
+
+
+a[href|="/calamitytale"], a[href|="/lpfun"], a[href|="/lpspittake"], a[href|="/bjhate"], a[href|="/lpfof"], a[href|="/psychoshy"], a[href|="/fightcalamity"]
+{
+display: block;
+clear: none;
+float: left;
+width: 70px;
+height: 70px;
+background-image: url(%%foe-em4-v7%%);
+}
+
+a[href|="/bjhate"]{background-position: 0 0; width: 70px; height: 75px;}
+a[href|="/calamitytale"]{ background-position: 0 -120px; width: 178px; height: 150px;} 
+a[href|="/lpfun"]{background-position: 0 -320px; width: 200px; height: 147px; } 
+a[href|="/lpspittake"]{background-position: 0 -517px; width: 129px; height: 149px; } 
+a[href|="/lpfof"]{background-position: 0 -716px; width: 87px; height: 100px }
+a[href|="/psychoshy"]{ background-position: 0 -866px; width: 98px; height: 150px;}
+a[href|="/psychoshy"]:hover{ background-position: 0 -1066px; width: 98px; height: 150px;}
+a[href|="/fightcalamity"]{background-position: 0 -1266px; width: 154px; height: 150px;}
 
 
 a[href|="/advicebj"]
@@ -359,7 +363,7 @@ a[href|="/advicebj"]
     overflow: hidden !important;
     position: relative !important;
     text-transform: uppercase !important;
-    background-image: url(%%foe-em3-v29%%) !important;
+    background-image: url(%%foe-em3-v33%%) !important;
 }
 
 a[href|="/advicebj"]{ background-position: 0px -950px; width: 300px; height: 300px;}
@@ -386,7 +390,7 @@ a[href|='/advicebj'] strong{
 
 
 a[href|="/lpsign"]{
-    background-image: url(%%foe-em3-v29%%) !important;
+    background-image: url(%%foe-em3-v33%%) !important;
     background-repeat: no-repeat !important;
     display: inline-block !important;
     position: relative !important;
@@ -422,6 +426,17 @@ height: 221px;
 background-image: url(%%rsmash-v3%%);
 }
 a[href|='/rampagesmash'] {background-position: 0px 0px}
+
+a[href|="/calamitytrot"]
+{
+display: block;
+clear: none;
+float: left;
+width: 88px;
+height: 92px;
+background-image: url(%%calamity%%);
+}
+a[href|='/calamitytrot'] {background-position: 0px 0px}
 
 
 /* Flair */
