--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -176,11 +176,20 @@ a[href|="/flutterhugs"] {
     height: 267px;
     background-image: url(%%flutterhugs%%)
     }
+a[href|="/flutterlove"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 300px;
+    height: 256px;
+    background-image: url(%%flutterlove%%)
+    }
+
 /* Wintery emotes - Only four at the moment- */
 
 
 
-a[href|="/snowshy"], a[href|="/wfs00"], a[href|="/wfs01"], a[href|="/santashy"], a[href|="/wfs02"], a[href|="/wfs10"], a[href|="/merryshy"], a[href|="/wfs20"], a[href|="/scarfshy"], a[href|="/wfs11"], a[href|="/wfs12"], a[href|="/wfs21"], a[href|="/wfs22"] {
+a[href|="/snowshy"], a[href|="/wfs00"], a[href|="/wfs01"], a[href|="/santashy"], a[href|="/wfs10"], a[href|="/merryshy"], a[href|="/wfs20"], a[href|="/scarfshy"] {
 
 display: block;
 clear: none;
